<resources>
    <string name="app_name">Social Book</string>
    <string name="register_for_new_user">Register for new user</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="already_register">Already Register</string>
    <string name="contect_number">Contect Number</string>
    <string name="fees">Fees</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="social_book">Social Book</string>
    <string name="register">Register</string>
    <string name="_10_00">10:00</string>
    <string name="_02_03_2023">02/03/2023</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="back">Back</string>
    <string name="select_deliver_time">Select Deliver Time</string>
    <string name="book">Book</string>
</resources>